<resources>
    <string name="app_name">CryptoChallenge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="helloBlankFragment">Hello blank fragment</string>
    <string name="mainTextApp">Crypto App</string>
    <string name="txtButtonDescription">START !</string>
    <string name="txtContentFrontPage">Please, press the start button to get access the crypto app</string>
    <string name="txtHeader">CryptoApp</string>
    <string name="txtPriceLabel">Price</string>
    <string name="txtHighPriceLabel">High:</string>
    <string name="txtLowPriceLabel">Low:</string>
    <string name="txtLastPriceLabel">Last:</string>
    <string name="txtDescriptionLabel">Bids and Asks</string>

</resources>