<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cyan"
    tools:context=".ui.featureddetail.CryptoDetailFragment">

    <TextView
        android:id="@+id/txtCryptoNameHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:textSize="30sp"
        android:textColor="@color/white"
        tools:text="Ethereum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtCryptoNameHeader"/>

    <TextView
        android:id="@+id/txtLabelPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30sp"
        android:paddingBottom="10sp"
        android:paddingStart="30dp"
        android:paddingEnd="15dp"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:text="@string/txtPriceLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chart"
        />

    <TextView
        android:id="@+id/txtHighPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/txtHighPriceLabel"
        app:layout_constraintStart_toEndOf="@id/txtLabelPrice"
        app:layout_constraintTop_toBottomOf="@id/txtLabelPrice"
        />

    <TextView
        android:id="@+id/txtHighPriceData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:paddingStart="2sp"
        android:paddingEnd="1sp"
        android:paddingBottom="10sp"
        android:textSize="20sp"
        android:textColor="@color/white"
        tools:text="$20,000.00"
        app:layout_constraintStart_toEndOf="@id/txtHighPriceLabel"
        app:layout_constraintTop_toBottomOf="@id/txtLabelPrice"
        />

    <TextView
        android:id="@+id/txtLowPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/txtLowPriceLabel"
        app:layout_constraintStart_toStartOf="@id/txtHighPriceLabel"
        app:layout_constraintTop_toBottomOf="@id/txtHighPriceLabel"
        />

    <TextView
        android:id="@+id/txtLowPriceData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:paddingStart="2sp"
        android:paddingEnd="1sp"
        android:textSize="20sp"
        android:textColor="@color/white"
        tools:text= "$10,000.00"
        app:layout_constraintStart_toEndOf="@id/txtHighPriceLabel"
        app:layout_constraintTop_toBottomOf="@id/txtHighPriceLabel"
        />

    <TextView
        android:id="@+id/txtLastPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/txtLastPriceLabel"
        app:layout_constraintStart_toStartOf="@id/txtHighPriceLabel"
        app:layout_constraintTop_toBottomOf="@id/txtLowPriceLabel"
        />

    <TextView
        android:id="@+id/txtLastPriceData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:paddingStart="2sp"
        android:paddingEnd="1sp"
        android:textSize="20sp"
        android:textColor="@color/white"
        tools:text = "$9,000.00"
        app:layout_constraintStart_toEndOf="@id/txtHighPriceLabel"
        app:layout_constraintTop_toBottomOf="@id/txtLowPriceLabel"
        />
</androidx.constraintlayout.widget.ConstraintLayout>