<?xml version="1.0" encoding="utf-8"?>

<!--suppress ALL -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentFrontPage">

    <data>
        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cyan"
        tools:context=".ui.featuredhomepage.CryptoFrontPageFragment">

        <ImageView
            android:id="@+id/imgFrontPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_front_page_crypto_coin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guideLine"/>

        <TextView
            android:id="@+id/txtFrontPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainTextApp"
            android:textSize="50sp"
            android:textColor="@color/white"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guideLine"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50" />


        <TextView
            android:id="@+id/txtContentFrontPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtContentFrontPage"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:padding="40sp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideLine"
            />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/txtButtonDescription"
            android:backgroundTint="@color/white"
            android:elevation="10dp"
            android:shadowColor="@color/black"
            android:textColor="@color/cyan"
            android:textSize="30sp"
            android:onClickListener="@{onClickListener}"
            app:layout_constraintTop_toBottomOf="@id/txtContentFrontPage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
